--- a/DIETROUTINE/app/src/main/res/layout/activity_main.xml
+++ b/DIETROUTINE/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="333dp"
         android:layout_marginTop="-5dp"
         app:srcCompat="@drawable/diet_routine"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/dietRoutine"
@@ -30,9 +30,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="100dp"
         android:layout_marginTop="82dp"
-        android:text="DIET ROUTINE"
-        android:textColor="#000000"
-        android:textSize="32sp"
+        android:text="@string/diet_routine"
+        android:textAppearance="@style/diet_routine"
         android:typeface="serif"
         tools:ignore="TextSizeCheck" />
 
@@ -46,9 +45,8 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="408dp"
         android:layout_marginBottom="400dp"
-        android:text="MAKE AN INFORMED DECISION ABOUT YOUR DIET AND HEALTH."
-        android:textColor="#FFF623"
-        android:textSize="24sp"
+        android:text="@string/informed_decision"
+        android:textAppearance="@style/informed_decision"
         tools:ignore="TextSizeCheck" />
 
 
@@ -60,9 +58,8 @@
         android:layout_marginStart="130dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="642dp"
-        android:text="Take an account on :\n - individual medical history\n -  current health status\n - dietary preference\nGenerates:\n - tailored meal plan\n -recommended dietary\n  "
-        android:textColor="#D9D9D9"
-        android:textSize="20sp"
+        android:text="@string/take_account"
+        android:textAppearance="@style/take_account"
         tools:ignore="TextSizeCheck"/>
 
     <Button
@@ -74,7 +71,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="851dp"
         android:fillColor="#1E70D1"
-        android:text="START ASSESMENT" />
+        android:text="@string/start_assesment" />
 
 
 </RelativeLayout>
