--- a/DIETROUTINE/app/src/main/res/values/themes.xml
+++ b/DIETROUTINE/app/src/main/res/values/themes.xml
@@ -6,4 +6,45 @@
     </style>
 
     <style name="Theme.DIETROUTINE" parent="Base.Theme.DIETROUTINE" />
+    <style name="informed_decision">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#FFF623</item>
+    </style>
+
+    <style name="diet_routine">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="take_account">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#D9D9D9</item>
+    </style>
+
+    <style name="Get_recommendation">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="personal_details">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="health_status">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="dietary_prefe">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="additional_info">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+
 </resources>
