--- a/DIETROUTINE/app/src/main/res/values/themes.xml
+++ b/DIETROUTINE/app/src/main/res/values/themes.xml
@@ -45,6 +45,25 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#000000</item>
     </style>
-
+    <style name="your_person">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#0C0C0C</item>
+    </style>
+    <style name="remember_ta">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="breakfast">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="lunch">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="dinner">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 
 </resources>
